tests/correct/functions.vrv
// RUN: %verve

fn f<T>(x: T) -> T { x }

interface U<T> {}
interface V<T> {}

fn g<T: U>(x: T) -> T { x }
fn g<T: (U, V)>(x : T) -> T { x }
fn g<T: (U, V), U>(x: (T) -> U) -> (T) -> U { x }

fn g<U, T>(x : T) -> T { x }
fn g<U, T: V>(x : T) -> T { x }
fn g<X, T: (U, V)>(x : T) -> T { x }

fn g<U: V, T>(x : T) -> T { x }
fn g<U: V, T: V>(x : T) -> T { x }
fn g<X: V, T: (U, V)>(x : T) -> T { x }

fn g<U: (U, V), T>(x : T) -> T { x }
fn g<U: (U, V), T: V>(x : T) -> T { x }
fn g<U: (U, V), T: (V, V)>(x : T) -> T { x }

fn f<T>(x: T) -> T { x }
fn f<T, U>(x: T, y: U) -> T { x }
fn f<T, U>(x: (T) -> U, y: T) -> U { x(y) }
fn f<T, U>(x: T, y: (T) -> U) -> (T) -> U { y }

fn h<T>() -> Int { 42 }

fn h() -> Int { 13 }
fn i(x: Int) -> Int { h() }
i(42)
