tests/errors/fn_generic_scoping.vrv
interface f<t> {
  virtual x<u>(u) -> t
  virtual y(u) -> t
}
